[gd_scene load_steps=5 format=3 uid="uid://d1ojgju21jqk0"]

[ext_resource type="Script" uid="uid://br8jybhejfht7" path="res://scenes/algorithm_editor/algorithm_editor.gd" id="1_cn3q2"]
[ext_resource type="Texture2D" uid="uid://720rq6pccuy6" path="res://assets/arrow_up.png" id="2_up4is"]
[ext_resource type="Texture2D" uid="uid://cf740g51nsj5f" path="res://assets/arrow_down.png" id="3_kjdv1"]
[ext_resource type="Texture2D" uid="uid://cmj4njmpw0hkt" path="res://assets/GuiVisibilityVisible.svg" id="4_y0s4s"]

[node name="AlgorithmEditor" type="PanelContainer"]
custom_minimum_size = Vector2(271, 64)
anchors_preset = 10
anchor_right = 1.0
offset_right = -704.0
offset_bottom = 64.0
grow_horizontal = 2
script = ExtResource("1_cn3q2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Move" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MoveUp" type="Button" parent="HBoxContainer/Move"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
icon = ExtResource("2_up4is")
expand_icon = true

[node name="MoveDown" type="Button" parent="HBoxContainer/Move"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
icon = ExtResource("3_kjdv1")
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="AlgorithmName" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnabledButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
toggle_mode = true
button_pressed = true
icon = ExtResource("4_y0s4s")
flat = true
expand_icon = true

[node name="RemoveButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Remove"

[node name="ParameterSliders" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/Move/MoveUp" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="HBoxContainer/Move/MoveDown" to="." method="_on_move_down_pressed"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/HBoxContainer/EnabledButton" to="." method="_on_enabled_button_toggled"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
